# complianceQA

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.template
src/: chain.py  eval_dataset.py  eval_runner.py  ingestor.py
