[project]
name = "complianceqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=0.5.0",
    "cryptography>=47.0.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "openai>=1.30.0",
    "pypdf>=4.0.0",
    "streamlit>=1.32.0",
    "tiktoken>=0.7.0",
]
